# malbolge-rusted

./: Cargo.toml  README.md  another_hello.mb  prime.mb
lib_malbolge/: Cargo.toml
lib_malbolge/src/: lib.rs  ten_trit.rs
malbolge/: Cargo.toml
malbolge/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
