[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
lib_malbolge = { path = "../lib_malbolge" }
js-sys = "0.3.70"
wasm-bindgen = "0.2.93"

[dependencies.web-sys]
version = "0.3.70"
features = [
	"CanvasRenderingContext2d",
	"Document",
	"Element",
	"HtmlCanvasElement",
	"ImageData",
	"KeyboardEvent",
	"Window",
]

[lib]
crate-type = ["cdylib"]
